--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
+  "name": "fec4-reviews",
+  "description": "> Project description",
   "author": "",
-  "license": "",
+  "license": "ISC",
   "engines": {
     "node": ">=6.13.0"
   },
   "scripts": {
+    "build": "webpack --mode production"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
-  }
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "webpack": "^4.29.3"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hrr36-fec4/fec4-reviews.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/hrr36-fec4/fec4-reviews/issues"
+  },
+  "homepage": "https://github.com/hrr36-fec4/fec4-reviews#readme"
 }
