--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
-module.exports = {
-  module: {
-    rules: [
-      {
-        test: /\.(js|jsx)$/,
-        exclude: /node_modules/,
-        use: {
-          loader: "babel-loader"
-        }
-      }
-    ]
-  }
-};
+{
+  "presets": ["@babel/env", "@babel/react"]
+}
