--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "start": "webpack --mode development",
     "build": "webpack --mode production"
   },
   "dependencies": {},
@@ -18,7 +19,9 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "webpack": "^4.29.3"
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev": "^1.1.1"
   },
   "version": "1.0.0",
   "main": "index.js",
