--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "body-parser": "^1.18.3",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.10",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "webpack": "^4.29.3",
