--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "express": "^4.16.4",
+    "jest": "^24.1.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.10",
     "react": "^16.8.1",
