--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "express": "^4.16.4",
     "jest": "^24.1.0",
+    "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.10",
     "react": "^16.8.1",
