--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "server": "nodemon server/index.js",
     "build": "webpack --mode production",
     "db:setup": "node server/db/seed.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
     "express": "^4.16.4",
