--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev:react": "webpack -d --watch",
-    "server": "nodemon server/index.js",
+    "start": "nodemon server/index.js",
     "build": "webpack --mode production",
     "db:setup": "node server/db/seed.js",
     "test": "jest --detectOpenHandles"
@@ -18,6 +18,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^3.9.2",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
@@ -26,6 +27,7 @@
     "express": "^4.16.4",
     "jest": "^24.1.0",
     "jquery": "^3.3.1",
+    "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "mongoose": "^5.4.10",
     "react": "^16.8.1",
