Refactored for airbnb style guidlines

--- a/package.json
+++ b/package.json
@@ -13,34 +13,35 @@
     "db:setup": "node server/db/seed.js",
     "test": "jest --detectOpenHandles"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "jquery": "^3.3.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.18.3",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "express": "^4.16.4",
     "jest": "^24.1.0",
-    "jquery": "^3.3.1",
     "material-ui": "^0.20.2",
     "moment": "^2.24.0",
     "mongoose": "^5.4.10",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev": "^1.1.1",
