--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-rewire": "^1.2.0",
     "babel-polyfill": "^6.26.0",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
