--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.1.0",
     "mongoose": "^5.4.10",
+    "sinon": "^7.2.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev": "^1.1.1",
