--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "react-scripts": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -45,16 +46,13 @@
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.1.0",
     "mongoose": "^5.4.10",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.8.2",
     "sinon": "^7.2.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev": "^1.1.1",
     "webpack-dev-server": "^3.1.14"
-  },
-  "jest": {
-    "setupFiles": [
-      "<rootDir>/test/enzyme.setup.js"
-    ]
   },
   "version": "1.0.0",
   "main": "index.js",
