--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^5.4.10",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
