--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.10",
+    "prop-types": "^15.7.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "^2.1.5",
