--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.8.2",
     "sinon": "^7.2.3",
+    "supertest": "^3.4.2",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev": "^1.1.1",
