--- a/package.json
+++ b/package.json
@@ -22,28 +22,28 @@
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.10",
+    "mongoose": "^5.4.14",
     "prop-types": "^15.7.2",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-scripts": "^2.1.5",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.3",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.1",
-    "@material-ui/icons": "^3.0.2",
+    "acorn": "^6.1.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-rewire": "^1.2.0",
     "babel-polyfill": "^6.26.0",
-    "enzyme": "^3.8.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -51,12 +51,12 @@
     "jest": "^24.1.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.8.2",
-    "sinon": "^7.2.3",
+    "sinon": "^7.2.4",
     "supertest": "^3.4.2",
-    "webpack": "^4.29.3",
+    "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev": "^1.1.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.2.0"
   },
   "version": "1.0.0",
   "main": "index.js",
