--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "^2.1.5",
-    "underscore": "^1.9.1"
+    "react-scripts": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
@@ -35,8 +34,6 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.1",
-    "acorn": "^6.1.0",
-    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-rewire": "^1.2.0",
@@ -54,9 +51,7 @@
     "sinon": "^7.2.4",
     "supertest": "^3.4.2",
     "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev": "^1.1.1",
-    "webpack-dev-server": "^3.2.0"
+    "webpack-cli": "^3.2.3"
   },
   "version": "1.0.0",
   "main": "index.js",
