--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev:react": "webpack -d --watch",
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "build": "webpack --mode production",
     "db:setup": "node server/db/seed.js",
     "test": "jest --detectOpenHandles --forceExit"
