--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "faker": "^4.1.0",
     "jest": "^24.1.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.8.2",
