--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "csv-writer": "^1.2.0",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
