--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
     "dev:react": "webpack -d --watch",
     "start": "node server/index.js",
     "build": "webpack --mode production",
-    "db:setup": "node server/db/seed.js",
-    "test": "jest --detectOpenHandles --forceExit"
+    "legacy_db:setup": "node server/db/seed.js",
+    "seed": "node --max-old-space-size=4096 ./server/db/data_generator/generate.js",
+    "test": "jest --detectOpenHandles --forceExit",
+    "testDbConnect": "node ./server/db/index.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "csv-parser": "^2.1.0",
     "csv-writer": "^1.2.0",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "mariadb": "^2.0.3",
+    "mariasql": "^0.2.6",
     "moment": "^2.24.0",
     "mongoose": "^5.4.14",
+    "mysql2": "^1.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "sequelize": "^5.0.0-beta.16"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
