--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 bower_components
 node_modules
 bundle.js
+server/db/data/products
+server/db/data/reviews
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
