--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 bower_components
 node_modules
 bundle.js
+report*.*
 server/db/data/products
 server/db/data/reviews
+server/db/data/productsTemp
+server/db/data/reviewsTemp
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
