--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "mysql2": "^1.6.5",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
+    "random-date-generator": "^1.0.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "^2.1.5",
-    "sequelize": "^5.0.0-beta.16",
-    "zero-fill": "^2.2.3"
+    "sequelize": "^5.0.0-beta.16"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
