--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.4.14",
     "mysql2": "^1.6.5",
+    "newrelic": "^5.6.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "random-date-generator": "^1.0.2",
