--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "build": "webpack --mode production",
+    "devstart": "nodemon server/index.js",
     "devbuild": "webpack -d --watch",
     "seed": "node server/db/seed.js",
     "DISABLEDcassSeed": "node server/db/cassandra-seed.js",
     "makeData": "node --max-old-space-size=6144 ./server/db/data/generate.js",
-    "test": "jest --detectOpenHandles --forceExit",
-    "testDbConnect": "node ./server/db/index.js"
+    "test": "jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "axios": "^0.18.0",
