--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "seed": "node server/db/seed.js",
     "DISABLEDcassSeed": "node server/db/cassandra-seed.js",
     "makeData": "node --max-old-space-size=6144 ./server/db/data/generate.js",
-    "test": "jest --detectOpenHandles --forceExit"
+    "test": "jest --detectOpenHandles --forceExit",
+    "stresstest": "artillery run newrelictest.yml"
   },
   "dependencies": {
     "axios": "^0.18.0",
