Implement style-loader and css-loader

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-rewire": "^1.2.0",
     "babel-polyfill": "^6.26.0",
+    "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^5.14.1",
@@ -63,6 +64,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.8.2",
     "sinon": "^7.2.4",
+    "style-loader": "^0.23.1",
     "supertest": "^3.4.2",
     "webpack": "^4.29.5",
     "webpack-bundle-analyzer": "^3.0.4",
