--- a/package.json
+++ b/package.json
@@ -21,24 +21,21 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cassandra-driver": "^4.0.0",
-    "csv-parser": "^2.1.0",
     "csv-writer": "^1.2.0",
     "express": "^4.16.4",
     "file-system": "^2.2.2",
+    "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.3.1",
     "mariadb": "^2.0.3",
     "mariasql": "^0.2.6",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.14",
     "mysql2": "^1.6.5",
     "newrelic": "^5.6.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
-    "random-date-generator": "^1.0.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "^2.1.5",
-    "sequelize": "^5.0.0-beta.16"
+    "react-scripts": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
